# pixhawk_robot

./: README.md  pix2.4.8.param
robot_pose_publisher/src/: robot_pose_publisher.cpp
ros_offboard_pkg/: CMakeLists.txt  package.xml
ros_offboard_pkg/config/: cartographer.lua
ros_offboard_pkg/launch/: mavros_apm.launch  mavros_apm_config.yaml  mavros_apm_pluginlists.yaml  mavros_apm_start.launch  mavros_model_car.launch  mavros_node.launch  mavros_offboard_controller.launch  mavros_offboard_set_home.launch  temp.txt
ros_offboard_pkg/nodes/: mav_setup_positon
ros_offboard_pkg/src/: offboard_node.cpp
